--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 SERPER_API_KEY="add_your_serper_api_key"
-
-OPENAI_API_KEY="add_your_openai_api_key"
+GROQ_API_KEY="add_your_groq_api_key"
+OPENAI_API_KEY="add_your_openai_api_key(you can write NA if you do not intend to use OpenAI API)"
